--- a/src/sass/module/_about-wrapper.scss
+++ b/src/sass/module/_about-wrapper.scss
@@ -6,12 +6,14 @@
 }
 
 .about__img01 {
+  display: block;
   width: 37%;
   position: relative;
   z-index: 1;
 }
 
 .about__img02 {
+  display: block;
   width: 82%;
   margin-left: auto;
   margin-top: -48.5%;
@@ -55,6 +57,7 @@
 }
 
 .about__detail {
+  font-family: "base-font-family";
   font-size: rem(16);
   color: $black;
   margin-top: rem(20);
@@ -66,6 +69,7 @@
 
 .about__btn {
   margin-top: rem(45);
+  text-align: center;
   @include mq(md) {
     margin-top: rem(35);
   }
