--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -1,12 +1,12 @@
 @use "global" as *;
 
 .blog {
-  padding-top: rem(77);
+  position: relative;
+  z-index: 0;
+
+  // padding-top: rem(77);
   @include mq(md) {
-    padding-top: rem(90);
-    background: url(../../../dist/assets/images/blog-back.jpg)no-repeat top center/contain;
-    position: relative;
-    z-index: 0;
+    // padding-top: rem(90);
   }
 }
 
@@ -14,12 +14,29 @@
   @include mq(md) {
     content:"";
     position: absolute;
-    background: url(../../../dist/assets/images/blog-deco.svg)no-repeat top left/contain;
+    background: url(./../images/blog-back.jpg)no-repeat top center/cover;
+    width: 100%;
+    height: rem(500);  
+  }
+}
+
+.blog::after {
+  @include mq(md) {
+    content:"";
+    position: absolute;
+    background: url(./../images/blog-deco.svg)no-repeat top left/contain;
     top: 3%;
     left: 7%;
     width: rem(437);
     height: rem(200);
     z-index: 1;
+  }
+}
+
+.blog__title {
+  padding-top: rem(77);
+  @include mq(md) {
+    padding-top: rem(90);
   }
 }
 
@@ -38,6 +55,7 @@
 
 .blog__btn {
   margin-top: rem(40);
+  text-align: center;
   @include mq(md) {
     margin-top: rem(70);
   }
