--- a/src/sass/module/_btn.scss
+++ b/src/sass/module/_btn.scss
@@ -2,68 +2,81 @@
 
 .btn {
   cursor: pointer;
-  transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
+  // transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
+  position: relative;
+  display: inline-block;
+}
+
+
+.btn::before {
+  border: 1px solid $green;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  left: rem(4);
+  position: absolute;
+  top: rem(4);
+  width: 100%;
 }
 
 // ボタン基本コード
-.btn.slide {
-  background: $green;
-  border: 1px solid $green;
-  box-shadow: #fff 4px 4px 0 0,$green 4px 4px 0 1px;
-
-  color: #fff;
-  display: block;
-  font-weight: bold;
-  max-width: rem(202);
-  margin: 0 auto;
-  letter-spacing: -1px;
-  padding: 14px rem(55) 14px 0%;
-  display: flex;
+.btn span {
   align-items: center;
-  justify-content: center;
-  position: relative;
+  background-color: $green;
+  border: 0.0625rem solid $green;
+  color: #fff;
+  display: inline-flex;
+  flex-direction: row-reverse;
+  font-size: rem(14);
+  font-weight: 400;
+  line-height: 1.5714285714;
   overflow: hidden;
+  padding: rem(15) rem(25) rem(15) rem(40);
   position: relative;
-  z-index: 1;
-  @include mq(md) {
-    padding: 14px rem(54) 14px 0%;
+  transition: 0.3s ease;
+  z-index: 1;  
+  // @include mq(md) {
+  //   padding: 14px rem(54) 14px 0%;
 
-  }
+  // }
 }
 
-.btn.slide::after {
-  background: $white;
+.btn span::after {
+  background: #fff;
+  content: "";
+  height: 100%;
+  left: 0;
   position: absolute;
   top: 0;
-  left: 0;
-  content: '';
-  width: 100%;
-  height: 100%;
   transform: scale(0, 1);
   transform-origin: left top;
-  transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
+  transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
+  width: 100%;
   z-index: -1;
 }
-.btn.slide:hover {
-  color: $green;
-}
-.btn.slide:hover::after {
+// .btn.slide:hover {
+//   color: $green;
+// }
+.btn span:hover::after {
   transform: scale(1, 1);
 }
 
-.btn.slide::before {
+.btn span::before {
   content:"";
-  position: absolute;
-  background: url(../../../dist/assets/images/arrow.svg)no-repeat right/contain;
-  width:rem(40);
-  height: 50px;
-  right: 39px;
-  top: -1px;
+  background: url(./../images/arrow.svg)no-repeat center/contain;
+  content: "";
+  display: inline-flex;
+  height: rem(8);
+  margin-top: rem(-4);
+  transition: 0.3s ease;
+  width: rem(61);
 }
 
-.btn.slide:hover::before {
-  background: url(../../../dist/assets/images/arrow-green.svg)no-repeat right/contain;
+.btn span:hover::before {
+  background: url(./../images/arrow-green.svg)no-repeat center/contain;
 }
 
 
-
+.btn span:hover {
+  color: $green;
+}
