--- a/src/sass/module/_card01.scss
+++ b/src/sass/module/_card01.scss
@@ -2,11 +2,15 @@
 
 .card01 {
   max-width: rem(280);
-  min-height: rem(366);
+  // min-height: rem(366);
   box-shadow: 2px 2px 10px rgba(0,0,0,.25);
   margin-bottom: rem(10);
+  display: flex;
+  flex-direction: column;
+  height: auto;
   @include mq(md) {
     max-width: rem(333);
+    // min-height: rem(318);
   }
 }
 
@@ -22,10 +26,11 @@
   object-fit: cover;
 }
 
-.card01__header {
+.card01__head {
   padding:rem(16) 0 rem(5);
   border-bottom: 1px solid $green;
   margin: 0 rem(16);
+  flex-grow: 1;
   @include mq(md) {
     padding:rem(22) 0 rem(5);
   }
@@ -77,6 +82,12 @@
   font-weight: $bold;
   color: $green;
   line-height: 1.5;
+  display: flex;
+  width: 87%;
+  max-width: 262px;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: space-between;
   @include mq(md) {
     font-size: rem(40);
     line-height: 1.4;
@@ -89,6 +100,7 @@
   font-size: rem(20);
   color: $black;
   margin-right: rem(18);
+  margin-top: rem(10);
   @include mq(md) {
     font-size: rem(24);
     margin-right: rem(25);
