--- a/src/sass/module/_card02.scss
+++ b/src/sass/module/_card02.scss
@@ -2,7 +2,7 @@
 
 .card02 {
   display: block;
-  max-width: rem(333);
+  width: 100%;
   margin: 0 auto rem(10);
   min-height: rem(447);
   box-shadow: 2px 2px 10px rgba(0,0,0,.25);
@@ -11,7 +11,8 @@
   transition: filter .3s;
   position: relative;
   @include mq(md) {
-    width: 33%;
+    // width: 33%;
+    max-width: rem(333);
   }
 }
 
@@ -47,7 +48,7 @@
   object-fit: cover;
 }
 
-.card02__header {
+.card02__head {
   padding:rem(20) 0 0;
   border-bottom: 1px solid $green;
 }
@@ -61,16 +62,15 @@
   font-size: rem(16);
   font-weight: $medium;
   margin-top: rem(1);
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  // overflow: hidden;
+  // text-overflow: ellipsis;
 }
 
 .card02__body {
-  margin-top: rem(19);
 }
 
 .card02__detail {
+  margin-top: rem(19);
   font-size: rem(16);
   display: -webkit-box;
   -webkit-box-orient: vertical;
