--- a/src/sass/module/_card03.scss
+++ b/src/sass/module/_card03.scss
@@ -1,8 +1,10 @@
 @use "global" as *;
 
 .card03 {
+  font-family: "base-font-family";
   display: block;
-  max-width: rem(345);
+  width: 100%;
+  // max-width: rem(345);
   margin: 0 auto rem(10);
   // min-height: rem(420);
   box-shadow: 2px 2px 10px rgba(0,0,0,.25);
@@ -11,19 +13,21 @@
   @include mq(md) {
     max-width: rem(520);
     padding: rem(24) rem(25) rem(21) rem(23);
-    width: 47%;
+    // width: 47%;
   }
 }
 
 .card03__top {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
 }
 
 .card03__figure {
   aspect-ratio: 151/117;
   height: auto;
   width: 48%;
+  max-width: rem(181);
   @include mq(md) {
     width: 38%;
   }
