--- a/src/sass/module/_cards01.scss
+++ b/src/sass/module/_cards01.scss
@@ -1,74 +1,15 @@
 @use "global" as *;
 
 
-.cars {
-  // position: relative;
-  padding: 0 rem(15);
-  margin-top: rem(44);
+.cards {
+  margin-top: rem(95);
+  padding-left: rem(4);
   @include mq(md) {
-    // margin-left: 12.5%;
-    padding: 0 rem(25);
-    margin: rem(57) auto 0;
-    max-width: rem(1100);  
-  }
-  @include mq(xl) {
-    width: 75%;
-    max-width: rem(1100);  
-
+    margin-top: rem(27);
   }
 }
 
 .card01 + .card01 {
   margin-left: rem(40);
 }
-
-
-.campaign__title {
-  position: relative;
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-  display: none;
-  @include mq(md) {
-    display: block;
-    position: absolute;
-    z-index: 1;
-  
-  }
-}
-
-.swiper-button-prev:after,
-.swiper-button-next:after {
-  content: "";
-  position: absolute;
-  transform: translateY(-50%);
-  width: rem(80); /* 背景画像の幅を必ず指定 */
-  height: rem(80); /* 背景画像の高さを必ず指定 */
-  top: 97%;
-  z-index: 1;
-
-}
-
-
-.swiper-button-next {
-  right: 17%;
-}
-  
-/* 次へ矢印の背景画像 */
-.swiper-button-next::after {
-  background: transparent url(../../../dist/assets/images/arrow-next.svg) no-repeat top / contain;
-  }
-
-
-.swiper-button-prev {
-  left:auto;
-  right: 28%;
-}
-
- /* 前へ矢印の背景画像 */
-.swiper-button-prev::after {
-  background: transparent url(../../../dist/assets/images/arrow-prev.svg) no-repeat top / contain;
-}
-
 
