--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -28,7 +28,7 @@
   padding: 0 rem(15);
   @include mq(md) {
     width: 100%;
-    max-width:rem(1440);
+    // max-width:rem(1440);
     margin: 0 auto;
     padding: 0 rem(39) 0 rem(37);
   }
