--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -15,7 +15,7 @@
   @include mq(md) {
     position: absolute;
     content:"";
-    background: url(../../../dist/assets/images/price-deco.svg)no-repeat left bottom/contain;
+    background: url(./../images/price-deco.svg)no-repeat left bottom/contain;
     width: rem(437);
     height: rem(200);
     left: 7%;
@@ -34,15 +34,27 @@
 }
 
 .price__left {
+  aspect-ratio: 345/227;
+  width: 100%;
+  height: auto;
   @include mq(md) {
-    width: 45.5%;
+    aspect-ratio: 492/746;
+    width: 50%;
+    padding-left: 4.5%;
   }
+}
+
+.price__left img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .price__right {
   margin-top: rem(45);
   @include mq(md) {
-    width: 45.5%;
+    width: 50%;
+    padding-right: 4.5%;
     margin-top: rem(4);
   }
 }
@@ -69,12 +81,17 @@
   }
 }
 
+.price__menu {
+  padding-right: rem(30);
+}
+
 // .price__price {
 //   font-family: $base-font-family;
 // }
 
 .price__btn {
   margin-top: rem(40);
+  text-align: center;
   @include mq(md) {
     margin-top: rem(81);
   }
